fix(Settings): Aligning form fields in settings pages

--- a/src/containers/SettingsEditor/SettingsEditor.sass
+++ b/src/containers/SettingsEditor/SettingsEditor.sass
@@ -6,8 +6,7 @@ $field-gap: 8px
 .form-field
   flex-grow: 1
   width: 100%
-  max-width: 600px
-  // min-width: 150px
+  max-width: 800px
 
 .form-inline-field-help, .form-object-field-help
   display: none
